--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "node-rest-client": "^3.1.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "jquery": "^3.1.0",
+    "bootstrap": "^4.0.0-alpha.4"
   }
 }
