--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "node-rest-client": "^3.1.0",
     "request": "^2.83.0",
-    "jquery": "^3.1.0",
-    "bootstrap": "^4.0.0-alpha.4"
+    "bootstrap": "^3.3.7",
+    "cheerio": "^1.0.0-rc.1",
+    "jquery": "^3.0.0",
+    "popper.js": "^1.12.6"
   }
 }
