--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "electron": "~1.7.8"
   },
   "dependencies": {
-    "node-rest-client": "^3.1.0",
-    "request": "^2.83.0",
     "bootstrap": "^3.3.7",
     "cheerio": "^1.0.0-rc.1",
     "jquery": "^3.0.0",
-    "popper.js": "^1.12.6"
+    "node-rest-client": "^3.1.0",
+    "popper.js": "^1.12.6",
+    "request": "^2.83.0",
+    "smalltalk": "^2.5.1"
   }
 }
