--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.0.0",
     "node-rest-client": "^3.1.0",
     "popper.js": "^1.12.6",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "json-server": "^0.12.1"
   }
 }
